Бэкап перед переделкой пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -159,19 +159,19 @@
                     <li class="pagination_item pagination_item-current">
                     <a class="pagination_link pagination_current pagination_disabled">1</a></li>
 
-                    <li class="pagination_item">
+                    <li class="pagination_item pagination_item-notcorrent">
                     <a class="pagination_link pagination_disabled" href="#">2</a></li>
 
-                    <li class="pagination_item">
+                    <li class="pagination_item pagination_item-notcorrent">
                     <a class="pagination_link pagination_disabled" href="#">3</a></li>
 
-                    <li class="pagination_item">
+                    <li class="pagination_item pagination_item-notcorrent">
                     <a class="pagination_link pagination_disabled" href="#">4</a></li>
 
                     <li class="pagination_item pagination-white">
                     <a class="pagination_link pagination_disabled" href="#">...</a></li>
 
-                    <li class="pagination_item">
+                    <li class="pagination_item pagination_item-notcorrent">
                     <a class="pagination_link pagination_disabled" href="#">10</a></li>
                 </ul>
 
