испр пагинация и начаты кнопки

--- a/catalog.html
+++ b/catalog.html
@@ -157,7 +157,7 @@
                 <ul class="pagination">
 
                     <li class="pagination_item pagination_item-current">
-                    <a class="pagination_link pagination_current pagination_disabled">1</a></li>
+                    1</li>
 
                     <li class="pagination_item pagination_item-notcorrent">
                     <a class="pagination_link pagination_disabled" href="#">2</a></li>
@@ -169,7 +169,7 @@
                     <a class="pagination_link pagination_disabled" href="#">4</a></li>
 
                     <li class="pagination_item pagination-white">
-                    <a class="pagination_link pagination_disabled" href="#">...</a></li>
+                    <a class="pagination_link pagination_other" href="#">...</a></li>
 
                     <li class="pagination_item pagination_item-notcorrent">
                     <a class="pagination_link pagination_disabled" href="#">10</a></li>
