--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <ul class="navigation_list navigation_pages">
           <li class="navigation_item nav-main"> <a class="navigation_link" href="index.html"> Главная </a> </li>
           <li class="navigation_item nav-about"> <a class="navigation_link" href="#"> О Седоне </a> </li>
-          <li class="navigation_item nav-hotels curent-page-hotels"> <a class="navigation_link" href="catalog.html"> Гостиницы </a> </li>
+          <li class="navigation_item nav-hotels curent-page-hotels"> <a class="navigation_link" href="catalog.html"> Гостиницы </a><div class="selected-catalog"></div> </li>
         </ul>
         <ul class="navigation_list navigation_interfice">
           <li class="navigation_item interfice-search"> <a class="navigation_link" href="#"> <span class="visually-hidden">Поиск</span>
