Начало работы с ренджслайдером

--- a/catalog.html
+++ b/catalog.html
@@ -63,6 +63,8 @@
                         </ul>
                     </fieldset>
 
+                    <fieldset class="catalog-range-slider">
+                    <legend class="catalog-range-slider-legend">Стоимость, ₽:</legend>
                     <div class="range">
                       <div class="range-scale">
                         <div class="range-bar" style="left: 42px; width: 136px">
@@ -84,7 +86,7 @@
                         </label>
                       </div>
                     </div>
-
+                  </fieldset>
                     <DIV class="buttons-wrapper">
                       <button class="button accept_button" type="submit">Применить</button>
                       <button class="button reset_button" type="reset">Сбросить</button>
