Вливает тестветку с формой-слайдером

--- a/catalog.html
+++ b/catalog.html
@@ -89,11 +89,10 @@
                   </fieldset>-->
                   <fieldset class="catalog-range-slider">
                     <legend class="catalog-range-slider-legend">Стоимость, ₽:</legend>
-                  <div class="filter-range">
-                    <div class="filter-range-title">Стоимость в сутки (р):</div>
+
                     <div class="price-controls">
-                      <label class="min-price">от <input type="text" name="min-price" value="0"></label>
-                      <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+                      <label class="min-price"><input type="text" name="min-price" value="0"><span class="form-text-from"> от</span> </label>
+                      <label class="max-price"><input type="text" name="max-price" value="9000"><span class="form-text-to">до</span> </label>
                     </div>
                     <div class="range-controls">
                       <div class="scale">
@@ -101,7 +100,7 @@
                       </div>
                       <div class="range-toggle range-toggle-min"></div>
                       <div class="range-toggle range-toggle-max"></div>
-                    </div>
+
                   </fieldset>
 
 
