--- a/catalog.html
+++ b/catalog.html
@@ -44,11 +44,11 @@
                     <fieldset class="catalog_filter_group infrastructure">
                         <legend class="catalog_filter_title infrastructure-title">Инфраструктура:</legend>
                         <label class="control control-swimmingpool">
-                            <input class="control_input control_input-swimmingpool" type="checkbox" name="swimmingpool" >Бассейн</label>
+                            <input class="control_input control_input-swimmingpool visually-hidden" type="checkbox" name="swimmingpool" ><span class="control-mark"></span><span class="control-label">Бассейн</span></label>
                         <label class="control control-parking">
-                            <input class="control_input control_input-parking" type="checkbox" name="parking" >Парковка</label>
+                            <input class="control_input control_input-parking visually-hidden" type="checkbox" name="parking" ><span class="control-mark"></span><span class="control-label">Парковка</span></label>
                         <label class="control control-Wi-Fi">
-                            <input class="control_input control_input-Wi-Fi" type="checkbox" name="Wi-Fi">Wi-Fi</label>
+                            <input class="control_input control_input-Wi-Fi visually-hidden" type="checkbox" name="Wi-Fi"><span class="control-mark"></span><span class= "control-label">Wi-Fi</span></label>
                       </fieldset>
 
                       <fieldset class="catalog_filter_group accommodation_type">
@@ -63,30 +63,7 @@
                         </ul>
                     </fieldset>
 
-                    <!--<fieldset class="catalog-range-slider">
-                    <legend class="catalog-range-slider-legend">Стоимость, ₽:</legend>
-                    <div class="range">
-                      <div class="range-scale">
-                        <div class="range-bar" style="left: 42px; width: 136px">
-                          <button class="range-toggle toggle-min">
-                            <span class="visually-hidden">Изменить минимальную цену.</span>
-                          </button>
-                          <button class="range-toggle toggle-max">
-                            <span class="visually-hidden">Изменить максимальную цену.</span>
-                          </button>
-                        </div>
-                      </div>
 
-                      <div class="range-wrapper-inputs">
-                        <label class="catalog-filter-label">
-                          от <input class="range-input" type="number" value="50" name="min-price"> ₽
-                        </label>
-                        <label class="catalog-filter-label">
-                          до <input class="range-input" type="number" value="1500" name="max-price" style="width: 37px"> ₽
-                        </label>
-                      </div>
-                    </div>
-                  </fieldset>-->
                   <fieldset class="catalog-range-slider">
                     <legend class="catalog-range-slider-legend">Стоимость, ₽:</legend>
 
