--- a/catalog.html
+++ b/catalog.html
@@ -44,11 +44,11 @@
                     <fieldset class="catalog_filter_group infrastructure">
                         <legend class="catalog_filter_title infrastructure-title">Инфраструктура:</legend>
                         <label class="control control-swimmingpool">
-                            <input class="control_input control_input-swimmingpool visually-hidden" type="checkbox" name="swimmingpool" ><span class="control-mark"></span><span class="control-label">Бассейн</span></label>
+                            <input class="control_input control_input-swimmingpool visually-hidden" type="checkbox" name="swimmingpool" ><span class="control-mark"><svg class="checked-svg" width="13" height="11" aria-hidden="true" focusable="false" viewBox="0 0 13 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11 .5 4.5 7.9 1.1 4 0 5.2l4.5 5.2 7.7-8.6L11 .5Z" fill=""/></svg></span><span class="control-label">Бассейн</span></label>
                         <label class="control control-parking">
-                            <input class="control_input control_input-parking visually-hidden" type="checkbox" name="parking" ><span class="control-mark"></span><span class="control-label">Парковка</span></label>
+                            <input class="control_input control_input-parking visually-hidden" type="checkbox" name="parking" ><span class="control-mark"><svg class="checked-svg" width="13" height="11" aria-hidden="true" focusable="false" viewBox="0 0 13 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11 .5 4.5 7.9 1.1 4 0 5.2l4.5 5.2 7.7-8.6L11 .5Z" fill=""/></svg></span><span class="control-label">Парковка</span></label>
                         <label class="control control-Wi-Fi">
-                            <input class="control_input control_input-Wi-Fi visually-hidden" type="checkbox" name="Wi-Fi"><span class="control-mark"></span><span class= "control-label">Wi-Fi</span></label>
+                            <input class="control_input control_input-Wi-Fi visually-hidden" type="checkbox" name="Wi-Fi"><span class="control-mark"><svg class="checked-svg" width="13" height="11" aria-hidden="true" focusable="false" viewBox="0 0 13 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11 .5 4.5 7.9 1.1 4 0 5.2l4.5 5.2 7.7-8.6L11 .5Z" fill=""/></svg></span><span class= "control-label">Wi-Fi</span></label>
                       </fieldset>
 
                       <fieldset class="catalog_filter_group accommodation_type">
