Фон фильтра и начала радиокнопок

--- a/catalog.html
+++ b/catalog.html
@@ -54,12 +54,12 @@
                       <fieldset class="catalog_filter_group accommodation_type">
                       <legend class="catalog_filter_title accommodation_type-title">Тип жилья:</legend>
                         <ul class="accommodation_type_list">
-                          <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-hot"><input class="control-input-ac" type="radio" name="accommodation"
-                             value="hotel">Гостиница </label></li>
-                          <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-mot"><input class="control-input-ac" type="radio" name="accommodation"
-                            value="Motel">Мотель </label></li>
-                          <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-app"><input class="control-input-ac" type="radio" name="accommodation"
-                            value="Apartments">Апартаменты </label></li>
+                          <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-hot"><input class="control-input-ac visually-hidden" type="radio" name="accommodation"
+                             value="hotel"><span class="control-radio control-radio-hot"></span><span>Гостиница</span></label></li>
+                          <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-mot"><input class="control-input-ac visually-hidden" type="radio" name="accommodation"
+                            value="Motel"><span class="control-radio control-radio-mot"></span><span>Мотель</span></label></li>
+                          <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-app"><input class="control-input-ac visually-hidden" type="radio" name="accommodation"
+                            value="Apartments"><span class="control-radio control-radio-app"></span><span>Апартаменты</span></label></li>
                         </ul>
                     </fieldset>
 
