Завершает стилизацию форм

--- a/catalog.html
+++ b/catalog.html
@@ -55,11 +55,11 @@
                       <legend class="catalog_filter_title accommodation_type-title">Тип жилья:</legend>
                         <ul class="accommodation_type_list">
                           <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-hot"><input class="control-input-ac visually-hidden" type="radio" name="accommodation"
-                             value="hotel"><span class="control-radio control-radio-hot"></span><span>Гостиница</span></label></li>
+                             value="hotel"><span class="control-radio control-radio-hot"></span><span class="radio-otion-describtion">Гостиница</span></label></li>
                           <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-mot"><input class="control-input-ac visually-hidden" type="radio" name="accommodation"
-                            value="Motel"><span class="control-radio control-radio-mot"></span><span>Мотель</span></label></li>
+                            value="Motel"><span class="control-radio control-radio-mot"></span><span class="radio-otion-describtion">Мотель</span></label></li>
                           <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-app"><input class="control-input-ac visually-hidden" type="radio" name="accommodation"
-                            value="Apartments"><span class="control-radio control-radio-app"></span><span>Апартаменты</span></label></li>
+                            value="Apartments"><span class="control-radio control-radio-app"></span><span class="radio-otion-describtion">Апартаменты</span></label></li>
                         </ul>
                     </fieldset>
 
