--- a/catalog.html
+++ b/catalog.html
@@ -96,11 +96,11 @@
                   <div class="sort-options-wrapper">
                     <h3 class="search_resaults_title">Найдено гостиниц: 38</h3>
 
-                    <select class="select_control sort-select" aria-label="Сортировка">
+                    <div class="select"><select class="select_control sort-select" aria-label="Сортировка">
                         <option value="cheap">Сначала дешёвые</option>
                         <option value="popular">Сначала популярные</option>
                         <option value="expensive">Сначала дорогие</option>
-                      </select>
+                      </select></div>
 
                       <div class="options_icons-wrapper">
                       <a class="button button_bold button_table-view" href="#"> <img class="view-icon-image" src="images/icons/table-view.png" alt="Показать таблицей"> </a>
