--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="navigation_list navigation_interfice">
           <li class="navigation_item interfice-search"> <a class="navigation_link" href="#"> <span class="visually-hidden">Поиск</span>
             <img src="images/icons/search.svg" alt="Кнопка поиска" width="19" height="19"> </a> </li>
-          <li class="navigation_item interfice-favorites"> <a class="navigation_link" href="#"> <span class="visually-hidden">Избранное</span>
+          <li class="navigation_item interfice-favorites"> <a class="navigation_link" href="#"><span class="number-of-favorite">12</span> <span class="visually-hidden">Избранное</span>
             <img src="images/icons/favorite.svg" alt="Кнопка избранного" width="19" height="17"> </a> </li>
           <li class="navigation_item interfice-go"> <a class="lets_go_button" href="#"> Хочу сюда! </a> </li>
         </ul>
@@ -134,9 +134,9 @@
         </div>
     </footer>
 
-    <div class="modal-container turn-off-modal">
+    <div class="modal-container turn-off-modal visually-hidden">
       <div class="modal">
-        <h2 class="modal-title">Поиск гостиницы в Седоне</h1>
+        <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
         <form class="calendar-hotel calendar-hotel-off" action="https://echo.htmlacademy.ru" method="post">
           <div class="calendar-line">
             <label for="arrivals">Дата Заезда:</label>
