--- a/catalog.html
+++ b/catalog.html
@@ -19,8 +19,8 @@
         <ul class="navigation_list navigation_interfice">
           <li class="navigation_item interfice-search"> <a class="navigation_link" href="#"> <span class="visually-hidden">Поиск</span>
             <img src="images/icons/search.svg" alt="Кнопка поиска" width="19" height="19"> </a> </li>
-          <li class="navigation_item interfice-favorites"> <a class="navigation_link" href="#"> <span class="visually-hidden">Избранное</span>
-            <img src="images/icons/favorite.svg" alt="Кнопка избранного" width="19" height="17"> </a> </li>
+            <li class="navigation_item interfice-favorites"> <a class="navigation_link" href="#"><span class="number-of-favorite">12</span> <span class="visually-hidden">Избранное</span>
+              <img src="images/icons/favorite.svg" alt="Кнопка избранного" width="19" height="17"> </a> </li>
           <li class="navigation_item interfice-go"> <a class="lets_go_button" href="#"> Хочу сюда! </a> </li>
         </ul>
       </nav>
@@ -50,7 +50,7 @@
                             <input class="control_input control_input-parking visually-hidden" type="checkbox" name="parking" ><span class="control-mark"><svg class="checked-svg" width="13" height="11" aria-hidden="true" focusable="false" viewBox="0 0 13 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11 .5 4.5 7.9 1.1 4 0 5.2l4.5 5.2 7.7-8.6L11 .5Z" fill=""/></svg></span><span class="control-label">Парковка</span></label>
                         <label class="control control-Wi-Fi">
                             <input class="control_input control_input-Wi-Fi visually-hidden" type="checkbox" name="Wi-Fi"><span class="control-mark"><svg class="checked-svg" width="13" height="11" aria-hidden="true" focusable="false" viewBox="0 0 13 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11 .5 4.5 7.9 1.1 4 0 5.2l4.5 5.2 7.7-8.6L11 .5Z" fill=""/></svg></span><span class= "control-label">Wi-Fi</span></label>
-                      </fieldset>
+                    </fieldset>
 
                       <fieldset class="catalog_filter_group accommodation_type">
                       <legend class="catalog_filter_title accommodation_type-title">Тип жилья:</legend>
@@ -62,7 +62,7 @@
                           <li class="accommodation_type_list_item"><label class="checkbox checkbox-tupe-ac checkbox-app"><input class="control-input-ac visually-hidden" type="radio" name="accommodation"
                             value="Apartments"><span class="control-radio control-radio-app"></span><span class="radio-otion-describtion">Апартаменты</span></label></li>
                         </ul>
-                    </fieldset>
+                      </fieldset>
 
 
                   <fieldset class="catalog-range-slider">
@@ -78,6 +78,7 @@
                       </div>
                       <div class="range-toggle range-toggle-min"></div>
                       <div class="range-toggle range-toggle-max"></div>
+                    </div>
 
                   </fieldset>
 
