--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
     </footer>
 
-    <div class="modal-container turn-off-modal visually-hidden">
+    <div class="modal-container turn-off-modal ">
       <div class="modal">
         <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
         <form class="calendar-hotel calendar-hotel-off" action="https://echo.htmlacademy.ru" method="post">
