Добавляет крестик модалки

--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
         </div>
     </footer>
 
-    <div class="modal-container turn-off-modal ">
+    <div class="modal-container turn-off-modal visually-hidden">
       <div class="modal">
+        <span class="closing-modal"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" viewBox="0 0 14 14"><path fill="" d="M14 1.292 12.708 0 7 5.708 1.292 0 0 1.292 5.708 7 0 12.708 1.292 14 7 8.292 12.708 14 14 12.708 8.292 7 14 1.292Z"/></svg></span>
         <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
         <form class="calendar-hotel calendar-hotel-off" action="https://echo.htmlacademy.ru" method="post">
           <div class="calendar-line">
