Много правок переполнения и форматирования кода

--- a/catalog.html
+++ b/catalog.html
@@ -174,7 +174,7 @@
                     <a class="pagination_link pagination_other" href="#">...</a></li>
 
                     <li class="pagination_item pagination_item-notcorrent">
-                    <a class="pagination_link pagination_disabled" href="#">10</a></li>
+                    <a class="pagination_link pagination_disabled double-digit-pagination" href="#">10</a></li>
                 </ul>
 
                 </section>
