--- a/index.html
+++ b/index.html
@@ -12,36 +12,55 @@
       <nav class="navigation">
         <div class="logo_index"> <img src="images/header-logo.svg" alt="Логотип городка Седона на главной странице" width="139" height="70" > </div>
         <ul class="navigation_list navigation_pages">
-          <li class="navigation_item nav-main curent-page-main"> <a class="navigation_link" href="index.html"> Главная </a><div class="selected-main"></div> </li>
-          <li class="navigation_item nav-about"> <a class="navigation_link" href="#"> О Седоне </a> </li>
-          <li class="navigation_item nav-hotels"> <a class="navigation_link" href="catalog.html"> Гостиницы </a> </li>
+          <li class="navigation_item nav-main curent-page-main">
+            <a class="navigation_link" href="index.html"> Главная </a>
+            <div class="selected-main"></div>
+          </li>
+          <li class="navigation_item nav-about">
+            <a class="navigation_link" href="#"> О Седоне </a>
+          </li>
+          <li class="navigation_item nav-hotels">
+            <a class="navigation_link" href="catalog.html"> Гостиницы </a>
+          </li>
         </ul>
         <ul class="navigation_list navigation_interfice">
-          <li class="navigation_item interfice-search"> <a class="navigation_link" href="#"> <span class="visually-hidden">Поиск</span>
-            <img src="images/icons/search.svg" alt="Кнопка поиска" width="19" height="19"> </a> </li>
-          <li class="navigation_item interfice-favorites"> <a class="navigation_link" href="#"><span class="number-of-favorite">12</span> <span class="visually-hidden">Избранное</span>
-            <img src="images/icons/favorite.svg" alt="Кнопка избранного" width="19" height="17"> </a> </li>
-          <li class="navigation_item interfice-go"> <a class="lets_go_button" href="#"> Хочу сюда! </a> </li>
+          <li class="navigation_item interfice-search">
+            <a class="navigation_link" href="#">
+              <span class="visually-hidden">Поиск</span>
+              <img src="images/icons/search.svg" alt="Кнопка поиска" width="19" height="19">
+            </a>
+          </li>
+          <li class="navigation_item interfice-favorites">
+            <a class="navigation_link" href="#">
+              <span class="number-of-favorite">12</span>
+              <span class="visually-hidden">Избранное</span>
+            <img src="images/icons/favorite.svg" alt="Кнопка избранного" width="19" height="17">
+            </a>
+          </li>
+          <li class="navigation_item interfice-go">
+            <a class="lets_go_button" href="#"> Хочу сюда! </a>
+          </li>
         </ul>
       </nav>
 
     </header>
     <main class="main_index main-container">
       <div class="page-container">
-      <h1 class="visually-hidden"> Welcome to Sedona </h1>
-      <img src="images/Wellcome-photo.jpg" alt="Фон приветственной фотографии Седоны" class="welcome_photo" width="1200" height="485">
-      <div class="advantages">
-      <h2 class="sedona_short_description"> Седона — небольшой городок в Аризоне,<br>
-        заслуживающий большего! </h2>
-        <p class="advantages_intro">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-      </div>
+        <h1 class="visually-hidden"> Welcome to Sedona </h1>
+        <img src="images/Wellcome-photo.jpg" alt="Фон приветственной фотографии Седоны" class="welcome_photo" width="1200" height="485">
+        <div class="advantages">
+          <h2 class="sedona_short_description"> Седона — небольшой городок в Аризоне,<br> заслуживающий большего! </h2>
+          <p class="advantages_intro">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        </div>
+
       <section>
         <ul class="advantages_list">
-          <li class="advantages_photoitem advantages-dark-blue"><div class="advantages_block-photo">
-            <h3 class="advantages_title">Настоящий <br> городок</h3>
-            <div class="hyphen-white"></div>
+          <li class="advantages_photoitem advantages-dark-blue">
+            <div class="advantages_block-photo">
+              <h3 class="advantages_title">Настоящий <br> городок</h3>
+              <div class="hyphen-white"></div>
             <p class="advantages_description advantages_description_white">Седона — не аттракцион для туристов, там течёт своя жизнь</p></div>
-            <div class="advantages_photo-wrapper"><img class="advantages_photo" src="images/advanteges/photo-1.jpg" width="800" height="384" alt="Фотография городка"></div>
+            <div class="advantages_photo-wrapper"><img class="advantages_photo" src="images/advanteges/photo-1.jpg" width="800" height="100%" alt="Фотография городка"></div>
 
           <li class="advantages_item advantages-soft-blue"><div class="advantages_block"><div class="advantages-description-wrapper-112">
             <h3 class="advantages_title">Небольшая <br> площадь</h3>
@@ -62,7 +81,7 @@
             <h3 class="advantages_title">Там есть <br> мост дьявола</h3>
             <div class="hyphen-white"></div>
             <p class="advantages_description advantages_description_white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p></div>
-            <div class="advantages_photo-wrapper advantages_photo-wrapper-bridge"><img class="advantages_photo" src="images/advanteges/photo-2.jpg" width="800" height="384" alt="Фотография моста дьявола"></div></li>
+            <div class="advantages_photo-wrapper advantages_photo-wrapper-bridge"><img class="advantages_photo" src="images/advanteges/photo-2.jpg" width="800" height="100%" alt="Фотография моста дьявола"></div></li>
 
           <li class="oftop_advantage"><div class="oftop_advantages_block">
             <h2 class="oftop_header">Приезжайте в Седону отдохнуть <br> в комфорте и уюте!</h2>
@@ -97,7 +116,7 @@
       <div class="page-footer-container">
       <section class="newsletter"> <div class="newsletter-wrapper">
         <h2 class="newsletter_title">Подпишитесь на рассылку</h2>
-        <p class="newsletter_description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p><div class=".sub_modul-wrapper">
+        <p class="newsletter_description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p><div class="sub_modul-wrapper">
         <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter_subscribe">
           <input class="subscribe" type="email" placeholder="Ваш e-mail" name="newsletter-email" >
           <button type="submit" class="subscribe_button">Подписаться</button>
@@ -134,7 +153,7 @@
         </div>
     </footer>
 
-    <div class="modal-container turn-off-modal">
+    <div class="modal-container turn-off-modal visually-hidden">
       <div class="modal">
         <span class="closing-modal"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" viewBox="0 0 14 14"><path fill="" d="M14 1.292 12.708 0 7 5.708 1.292 0 0 1.292 5.708 7 0 12.708 1.292 14 7 8.292 12.708 14 14 12.708 8.292 7 14 1.292Z"/></svg></span>
         <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
