--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
           <p class="advantages_intro">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </div>
 
-      <section>
         <ul class="advantages_list">
           <li class="advantages_photoitem advantages-dark-blue">
             <div class="advantages_block-photo">
@@ -145,7 +144,7 @@
 
 
         </ul>
-      </section>
+
       <section class="Search_hotel">
         <div class="search_hotel-wrapper">
           <h2 class="Search_hotel_title">Заинтересовались?</h2>
@@ -229,7 +228,7 @@
       </div>
     </footer>
 
-    <div class="modal-container turn-off-modal visually-hidden">
+    <div class="modal-container turn-off-modal">
         <div class="modal">
 
           <span class="closing-modal">
@@ -266,13 +265,12 @@
                </div>
 
               <div class="children-line">
-               <label for="children">Дети:
-                <svg class="info-svg" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="13" cy="13" r="13" fill="#83B3D3"/><path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M12 7h2v2h-2V7Zm2 12h-2v-9h2v9Z" fill="#fff"/>
-                </svg>
-                <span class="info-banner">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
-              </label>
+               <label for="children">Дети:</label>
+               <svg class="info-svg" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="13" cy="13" r="13" fill="#83B3D3"/><path fill-rule="evenodd" clip-rule="evenodd"
+                d="M12 7h2v2h-2V7Zm2 12h-2v-9h2v9Z" fill="#fff"/>
+               </svg>
+               <span class="info-banner">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
 
               <div class="buttons-wrapper-modal buttons-wrapper-modal-add">
                 <button class="plus-minus" type="submit">
