--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
                 <circle cx="13" cy="13" r="13" fill="#83B3D3"/><path fill-rule="evenodd" clip-rule="evenodd"
                 d="M12 7h2v2h-2V7Zm2 12h-2v-9h2v9Z" fill="#fff"/>
                </svg>
-               <span class="info-banner">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+               <div class="info-banner">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</div>
+               <div class="banner-element"></div>
 
               <div class="buttons-wrapper-modal buttons-wrapper-modal-add">
                 <button class="plus-minus" type="submit">
