Добавление ссылки под лого

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="page-header main-header">
 
       <nav class="navigation">
-        <div class="logo_index"> <img src="images/header-logo.svg" alt="Логотип городка Седона на главной странице." width="139" height="70" > </div>
+        <a href="index.html" class="logo_index"> <img src="images/header-logo.svg" alt="Логотип городка Седона на главной странице." width="139" height="70" > </a>
         <ul class="navigation_list navigation_pages">
           <li class="navigation_item nav-main"> <a class="navigation_link" href="index.html"> Главная </a> </li>
           <li class="navigation_item nav-about"> <a class="navigation_link" href="#"> О Седоне </a> </li>
