--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </div>
     </footer>
 
-    <div class="modal-container turn-off-modal ">
+    <div class="modal-container is-active">
         <div class="modal">
 
           <button class="closing-modal" aria-label="Закрыть окно.">
