--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="images/favicon.png">
   </head>
   <body>
     <header class="page-header main-header">
