--- a/catalog.html
+++ b/catalog.html
@@ -265,7 +265,7 @@
 
 
     </main>
-    <footer>
+    <footer class="catalog-footer">
       <div class="page-footer-container">
         <section class="newsletter-catalog">
           <div class="newsletter-wrapper">
